Fixed spacing on No items! in mobile view using min-height

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -45,6 +45,9 @@ header .navbar-section h1 img {
       padding-bottom: 0.4rem;
       border-bottom: 1px solid rgba(255, 255, 255, 0.9);
     }
+    .only-item {
+      min-height: 36px;
+    }
     li:last-child {
       padding-bottom: 0;
       border-bottom: none;
